--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-intl": "^5.20.2",
     "react-loading-overlay": "1.0.1",
     "react-markdown-editor-lite": "^1.3.0",
+    "react-modal": "^3.15.1",
     "react-number-format": "^4.6.4",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -34,7 +35,7 @@
     "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
     "react-toastify": "^5.5.0",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^8.10.1",
     "redux": "^4.1.0",
     "redux-auth-wrapper": "^2.1.0",
     "redux-logger": "^3.0.6",
